CONEXIÓN CON LA BD

--- a/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
+++ b/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#pablo">ENCUESTA SOBRE PAGOS</a>
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")">ENCUÉSTATE!</a>
             </div>
             <div class="collapse navbar-collapse" id="example-navbar-info">
                 <ul class="nav navbar-nav navbar-right">
