--- a/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
+++ b/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
             <div class="collapse navbar-collapse" id="example-navbar-info">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="#pablo">
-                            Discover
+                        <a href="@Url.Action("Login", "Account")">
+                            Ingresar
                         </a>
                     </li>
                 </ul>
