--- a/ENCUESTA.WEB/Views/Result/Index.cshtml
+++ b/ENCUESTA.WEB/Views/Result/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ENCUESTA.WEB.ViewModel.RecomendacionesViewModel.ListRecomendacionesViewModel
+﻿@using ENCUESTA.WEB.ViewModel.AccountViewModel
+@model ENCUESTA.WEB.ViewModel.RecomendacionesViewModel.ListRecomendacionesViewModel
 @{
     ViewBag.Title = "Index";
     Int32 count = 0;
