--- a/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
+++ b/ENCUESTA.WEB/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{ 
+﻿@*@@model ENCUESTA.WEB.ViewModel.AccountViewModel.RegisterViewModel*@
+@{ 
     ENCUESTA.WEB.Models.Usuario usuario = Session["objusuario"] as ENCUESTA.WEB.Models.Usuario;
     if(usuario!=null)
     {
@@ -13,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="@Url.Content("~/Content/assets/img/apple-icon.png")">
     <link rel="icon" type="image/png" href="@Url.Content("~/Content/assets/img/favicon.png")">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Kit by Creative Tim</title>
+    <title>Recomendación de Pagos</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <!-- Canonical SEO -->
     <link rel="canonical" href="http://www.creative-tim.com/product/material-kit-pro" />
@@ -37,7 +38,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Home")">ENCUÉSTATE!</a>
+                @if (TempData["title"] as String == "indexhome")
+                {
+                    <a class="navbar-brand" href="@Url.Action("Encuesta", "Home")">ENCUÉSTATE!</a>
+                }
+                else
+                {
+                    <a class="navbar-brand" href="@Url.Action("Index", "Home")">REGRESAR INICIO</a>
+                }
             </div>
             <div class="collapse navbar-collapse" id="example-navbar-info">
                 <ul class="nav navbar-nav navbar-right">
@@ -47,67 +55,140 @@
                         <li><a href="@Url.Action("ShowResult", "Result")">Mi última encuesta</a></li>
                         <li><a href="@Url.Action("Index", "Result")">Mis últimas encuestas</a></li>
                     }
-                    <li class="active">
-                        @if (usuario != null)
-                        {
-                            <a href="@Url.Action("SignOut", "Account")"> Salir</a>
-                        }
-                        else
-                        {
 
-                            <a href="@Url.Action("Login", "Account")"> Ingresar</a>
-                        }
-                    </li>
+                    @if (usuario != null)
+                    {
+                        <li>
+
+                            <a href="@Url.Action("SignOut", "Account")"> Salir</a>
+                        </li>
+                    }
+                    else
+                    {
+
+                        <li class="active" style="padding-right:15px">
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#signupModal" >
+                                Registrarse
+                            </button>
+                        </li>
+                        <li>
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#loginModal">
+                                Ingresar
+                            </button>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
     </nav>
 
         <div class="header-danger">
-            <div class="page-header">
-                <div class="container" >
-                    @RenderBody()
+            @if (TempData["title"] as String == "indexhome")
+            {
+
+                <div class="page-header" style=" background-image: url('@Url.Content("~/Content/assets/img/bg26.jpg")');height: 100vh;">
+                    <div class="container">
+                        @RenderBody()
+                    </div>
+                </div>
+            }
+            else
+            {
+
+                <div class="page-header">
+                    <div class="container">
+                        @RenderBody()
+                    </div>
+                </div>
+            }
+        </div>
+
+
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-login">
+            <div class="modal-content">
+                <div class="card card-signup card-plain">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
+                        <div class="header header-danger text-center">
+                            <h4 class="card-title">Iniciar Sesión</h4>
+                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form" method="post" action="@Url.Action("Login", "Account")">
+                            <div class="card-content">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">email</i>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Email..." name="emaillogin"/>
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="material-icons">lock_outline</i>
+                                    </span>
+                                    <input type="password" class="form-control" placeholder="Contraseña..." name="passlogin" />
+                                </div>
+                            </div>
+                            <div class="modal-footer text-center">
+                                <button type="submit" class="btn btn-danger btn-simple btn-wd btn-lg">Ingresar</button>
+                            </div>
+                        </form>
+                    </div>
+                    
                 </div>
             </div>
         </div>
+    </div>
 
 
-    <div class="section-space"></div>
-    <div class="main main-raised">
-            <footer class="footer">
-                <div class="container">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="http://www.creative-tim.com/">
-                                    Creative Tim
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://presentation.creative-tim.com/">
-                                    About Us
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://blog.creative-tim.com/">
-                                    Blog
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://www.creative-tim.com/license">
-                                    Licenses
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="copyright pull-right">
-                        &copy;
-                        <script>document.write(new Date().getFullYear())</script>, made with <i class="material-icons">favorite</i> by Creative Tim for a better web.
+    <!-- Register Modal -->
+    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-login">
+            <div class="modal-content">
+                <div class="card card-signup card-plain">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
+                        <div class="header header-danger text-center">
+                            <h4 class="card-title">Registro</h4>
+                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <form class="form" method="post" action="@Url.Action("Register", "Account")">
+                                    <div class="card-content">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <i class="material-icons">face</i>
+                                            </span>
+                                            <input type="text" class="form-control" placeholder="Nombres..." name="namereg" />
+                                        </div>
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <i class="material-icons">email</i>
+                                            </span>
+                                            <input type="text" class="form-control" placeholder="Email..." name="emailreg" />
+                                        </div>
+                                        <div class="input-group">
+                                            <span class="input-group-addon">
+                                                <i class="material-icons">lock_outline</i>
+                                            </span>
+                                            <input type="password" class="form-control" placeholder="Contraseña..." name="passreg" />
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer text-center">
+                                        <button type="submit" class="btn btn-danger btn-simple btn-wd btn-lg">Registrarse</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </footer>
+            </div>
         </div>
-
+    </div>
+    <!--  End Modal -->
 
         <!--   Core JS Files   -->
         <script src="@Url.Content("~/Content/assets/js/jquery.min.js")" type="text/javascript"></script>
