--- a/ENCUESTA.WEB/Views/Home/Index.cshtml
+++ b/ENCUESTA.WEB/Views/Home/Index.cshtml
@@ -9,6 +9,9 @@
         <h1 style="text-align:center" class="title">¡Bienvenido a la herramienta de recomendación de medios de pago digitales y alternos!</h1>
         <h3 style="text-align:center">El objetivo de esta herramienta es evaluar el estado actual de tu negocio mediante un cuestionario para así poder brindarte una recomendación de un medio de pago digital o alterno acorde a lo que necesita tu negocio.</h3>
         <br />
-        <a href="@Url.Action("Encuesta", "Home")" class="btn btn-danger btn-lg" style="left:400px;"><h2><b>EMPEZAR</b></h2></a>
+        <div align="center">
+            <a href="@Url.Action("Encuesta", "Home")" class="btn btn-danger btn-lg"><h2><b>EMPEZAR</b></h2></a>
+        </div>
+        
     </div>
 </div>
